feat: expose Route removal
